...
            // swapAnimationCurve: Curves.easeIn, // Optional
          ),
          Column(
            mainAxisAlignment: MainAxisAlignment.center,
            children: [
              Text(
                'Período',
                style: TextStyle(fontSize: 20.sp, fontWeight: FontWeight.bold),
              ),
              Text(
                DateFormat.yMd('pt_BR').format(dateFilter.initialDate),
                style: TextStyle(fontSize: 12.sp),
              ),
...
            ),
          ),
        ],
      ),
      actions: [
        IconButton(
          key: const Key('date_filter_key_home_page'),
          onPressed: () async {
            final initialDateController = TextEditingController();
            final finalDateController = TextEditingController();

            await showModalBottomSheet<void>(
              shape: const RoundedRectangleBorder(
...
                        Row(
                          mainAxisAlignment: MainAxisAlignment.spaceAround,
                          children: [
                            Expanded(
                              child: OndeGasteiTextForm(
                                key: const Key(
                                  'initial_date_filter_key_home_page',
                                ),
                                onTap: () async {
                                  final result = await showDatePicker(
                                    context: context,
                                    initialDate: DateTime.now(),
                                    firstDate: DateTime(2022),
...
                                    if (initialDateController.text.isNotEmpty &&
                                        finalDateController.text.isNotEmpty) {
                                      disableApplyFilterButton.value = false;
                                    }
                                  }
                                },
                                label: 'Data Inicial',
                                readOnly: true,
                                controller: initialDateController,
                                prefixIcon: const Icon(Icons.date_range),
                                textInputType: TextInputType.datetime,
                                inputFormatters: <TextInputFormatter>[
                                  LengthLimitingTextInputFormatter(10),
...
                              ),
                            ),
                            SizedBox(width: 8.w),
                            Expanded(
                              child: OndeGasteiTextForm(
                                key: const Key(
                                  'final_date_filter_key_home_page',
                                ),
                                onTap: () async {
                                  final result = await showDatePicker(
                                    context: context,
                                    initialDate: DateTime.now(),
                                    firstDate: DateTime(2022),
...
                                    if (initialDateController.text.isNotEmpty &&
                                        finalDateController.text.isNotEmpty) {
                                      disableApplyFilterButton.value = false;
                                    }
                                  }
                                },
                                label: 'Data Final',
                                controller: finalDateController,
                                readOnly: true,
                                prefixIcon: const Icon(Icons.date_range),
                                textInputType: TextInputType.datetime,
                                inputFormatters: <TextInputFormatter>[
                                  LengthLimitingTextInputFormatter(10),
...
                                  color: disable
                                      ? Colors.grey.shade700
                                      : Colors.white,
                                  fontSize: 12.sp,
                                ),
                              ),
                              key: const Key('apply_button_key_home_page'),
                              width: MediaQuery.of(context).size.width,
                              disable: disable,
                              onPressed: disable
                                  ? null
                                  : () async {
                                      Navigator.of(context).pop();
...
